--- a/02/index.html
+++ b/02/index.html
@@ -113,4 +113,17 @@
 		<p class="footer__legal">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus sint praesentium laboriosam atque placeat architecto, maxime temporibus sequi veniam quae culpa accusantium dignissimos natus perferendis mollitia quam optio incidunt. Esse!</p>
 	</footer>
 </body>
+<script
+
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script type="text/javascript">
+	$("article:nth-of-type(4) ul li:nth-of-type(3) a").text("pinterest").attr("href", "http://pinterest.com");
+	
+	$("a").on("click", function(event){
+event.preventDefault();
+});
+</script>
+
 </html>
