--- a/02/index.html
+++ b/02/index.html
@@ -119,11 +119,14 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script type="text/javascript">
-	$("article:nth-of-type(4) ul li:nth-of-type(3) a").text("pinterest").attr("href", "http://pinterest.com");
 	
-	$("a").on("click", function(event){
-event.preventDefault();
+$("article:nth-of-type(4) ul li:nth-of-type(3) a").text("pinterest").attr("href", "http://pinterest.com");
+
+$("a[href='#']").on("click", function(event){
+	event.preventDefault();
 });
+
+$(".header__main h2").css("font-size", "2rem")
 </script>
 
 </html>
